added alert styles css file

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         <!-- stylesheets -->
         <link rel="stylesheet" href="./styles/desktop-styles.css"/>
         <link rel="stylesheet" href="./styles/mobile-styles.css"/>
+        <link rel="stylesheet" href="./styles/alert-styles.css"/>
   </head>
   <body>
     <main ng-view></main>
