--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,16 @@
       <!-- factory/services -->
       <script type="text/javascript" src="./scripts/factories/init.factory.js"></script>
       <script type="text/javascript" src="./scripts/services/user.service.js"></script>
+      <!-- navionics -->
+      <script type="text/javascript" src="https://webapiv2.navionics.com/dist/webapi/webapi.min.no-dep.js"></script>
         <!-- favicon -->
         <link rel="icon" type="image/ico" href="./assets/images/icons/favicon.ico"/>
         <!-- stylesheets -->
         <link rel="stylesheet" href="./styles/desktop-styles.css"/>
         <link rel="stylesheet" href="./styles/mobile-styles.css"/>
         <link rel="stylesheet" href="./styles/alert-styles.css"/>
+        <!-- navionics -->
+        <link rel="stylesheet" href="https://webapiv2.navionics.com/dist/webapi/webapi.min.css" >
   </head>
   <body>
     <main ng-view></main>
