--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,18 @@
       <script type="text/javascript" src="./scripts/services/user.service.js"></script>
       <!-- navionics -->
       <script type="text/javascript" src="https://webapiv2.navionics.com/dist/webapi/webapi.min.no-dep.js"></script>
+      <script type="text/javascript" src="./assets/vendors/angular-tooltips.min.js"></script>
         <!-- favicon -->
         <link rel="icon" type="image/ico" href="./assets/images/icons/favicon.ico"/>
         <!-- stylesheets -->
         <link rel="stylesheet" href="./styles/desktop-styles.css"/>
         <link rel="stylesheet" href="./styles/mobile-styles.css"/>
         <link rel="stylesheet" href="./styles/alert-styles.css"/>
+        <!-- loader -->
+        <link rel="stylesheet" href="./styles/ball-running-dots.min.css"/>
         <!-- navionics -->
-        <link rel="stylesheet" href="https://webapiv2.navionics.com/dist/webapi/webapi.min.css" >
+        <link rel="stylesheet" href="https://webapiv2.navionics.com/dist/webapi/webapi.min.css" />
+        <link rel="stylesheet" href="./assets/vendors/angular-tooltips.min.css"/>
   </head>
   <body>
     <main ng-view></main>
