--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       <script type="text/javascript" src="./scripts/controllers/auth/register.controller.js"></script>
       <!-- factory/services -->
       <script type="text/javascript" src="./scripts/factories/init.factory.js"></script>
+      <script type="text/javascript" src="./scripts/factories/species.factory.js"></script>
       <script type="text/javascript" src="./scripts/services/user.service.js"></script>
       <!-- navionics -->
       <script type="text/javascript" src="https://webapiv2.navionics.com/dist/webapi/webapi.min.no-dep.js"></script>
